src/style/module/common/_background.scss
.inner {

    .bg {
        @include clearfix;

        position: absolute;
        top: 0; left: 0;
        width: 100vw;
        height: 100vh;

        *[class^="bg-"] {
            position: relative;
            float: left;
        }

        .bg-12 {
            max-width: 100%;
            width: 100%;
            height: 100%;
            overflow: hidden;
        }

        .bg-4 {
            max-width: 25%;
            width: 25%;
            height: 100%;
            overflow: hidden;
        }

        *[class^="bg-"] {

            img.fp {
                display: block;
                position: absolute;
                top: 0; left: 0;
            }

            img.fp-height {
                @media screen and (orientation: landscape) { height: 100%; width: auto; }
                @media screen and (orientation: portrait) { width: 100%; height: auto; }
            }

            img.fp-width {
                @media screen and (orientation: landscape) { width: 100%; height: auto; }
                @media screen and (orientation: portrait) {  height: 100%; width: auto;  }
            }

            img.zoom-scale {
                @include s-transition( all 3s ease-out );
                &:hover { @include s-scale( 1.1 ); }
            }
        }
    }
}

